# tucker_cuda

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh
examples/: example_usage.py  test_tucker_cuda.py
src/: CMakeLists.txt  bindings.cpp  host_logic.cpp  host_logic.cu  host_logic.h  main.cpp  tucker_kernels.cu  tucker_kernels.h
tests/: CMakeLists.txt  core_logic_test.cpp
tuckercuda/: tucker.py
